crates/strider-analyze/tests/snapshots/v3__x86_kernel__patterns__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x401100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v11" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x401110:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v18" [color="#888888", style=dashed];
  "v18" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x401120:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v24" [color="#888888", style=dashed];
  "v24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "19" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x401150:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v38" [color="#888888", style=dashed];
  "v38" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "43" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x4011d5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "19" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "53" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x4011c5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "56" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "13" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v62" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v62" [color="#888888", style=dashed];
  "v62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "63" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x4011ab:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v69" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v69" [color="#888888", style=dashed];
  "v69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "68" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "70" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "72" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x40119d:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v76" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v76" [color="#888888", style=dashed];
  "v76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "75" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "77" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x40118f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "80" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
